--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -13,8 +13,9 @@ body {
   font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif, "黑体";
   font-size: 16px;
   line-height: 1.5;
-  color: #606c71; 
-  overflow-x:hidden;}
+  color: #fff; 
+  overflow-x:hidden;
+  background-color:#313131;}
 
 
 
@@ -157,7 +158,7 @@ a {
   margin-bottom: 1rem;
   font-weight: normal;
   font-size:40px;
-  color: #60b17c; }
+  color: #a10000; }
 .main-content p {
   margin-bottom: 1em; }
 .main-content code {
@@ -297,7 +298,7 @@ a {
     font-size: 0.9rem; } }*/
 
 /* go top */
-#gotop{z-index:999;width:50px;height:50px;filter:alpha(opacity=40);opacity:0.4;background:url(../Pic/bg.gif) -110px -191px no-repeat;position:fixed;right:100px;bottom:50px;_position:absolute;
+#gotop{z-index:999;width:50px;height:50px;filter:alpha(opacity=40);opacity:0.4;background:url(../Pic/bg.gif) -110px -191px no-repeat;position:fixed;right:100px;bottom:50px;_position:absolute;transition: opacity 0.2s, filter 0.2s;
 _top:expression(eval(document.documentElement.scrollTop+document.documentElement.clientHeight-this.offsetHeight-(parseInt(this.currentStyle.marginTop)||0)-(parseInt(this.currentStyle.marginBottom)||0)-10))}
-#gotop:hover{filter:alpha(opacity=80);opacity:0.8}
+#gotop:hover{filter:alpha(opacity=80);opacity:0.8;}
 
