--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -95,6 +95,9 @@ a {
 .banner .b_push a:hover{background:#C4C4C4;}
 .banner .b_push a.on{background:#a10000}
 
+/* tail */
+.tail{position:relative;left:50%;margin-left:-960px;width:1920px;z-index:1;height:400px;}
+
 .page-header {
   color:#FFF;
   text-align: center;
