--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -175,24 +175,24 @@ a {
   padding: 2px 4px;
   font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace;
   font-size: 0.9rem;
-  color: #383e41;
+  color: #fff;
   background-color: #f3f6fa;
   border-radius: 0.3rem; }
 .main-content pre {
   padding: 0.8rem;
-  margin-top: 0;
-  margin-bottom: 1rem;
+  margin-top: 20px;
+  margin-bottom: 20px;
   font: 1rem Consolas, "Liberation Mono", Menlo, Courier, monospace;
-  color: #567482;
+  color: #fff;
   word-wrap: normal;
-  background-color: #f3f6fa;
-  border: solid 1px #dce6f0;
+  background-color: #6f6f6f;
+  border: solid 1px #6f6f6f;
   border-radius: 0.3rem; }
   .main-content pre > code {
     padding: 0;
     margin: 0;
     font-size: 0.9rem;
-    color: #567482;
+    color: #fff;
     word-break: normal;
     white-space: pre;
     background: transparent;
