--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -294,7 +294,7 @@ a {
 .site-footer {
   padding-top: 2rem;
   margin-top: 2rem;
-  border-top: solid 1px #eff0f1;
+  border-top: solid 1px #a10000;
   font-size: 1rem; }
 
 .site-footer-owner {
